[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/bg.png" type="Texture" id=1]
[ext_resource path="res://assets/font/ConcertOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/Encryptica.gd" type="Script" id=3]
[ext_resource path="res://scenes/Cartell.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/newbuthov.png" type="Texture" id=5]
[ext_resource path="res://assets/newbutnorm.png" type="Texture" id=6]
[ext_resource path="res://assets/newbutpressed.png" type="Texture" id=7]
[ext_resource path="res://assets/leadhov.png" type="Texture" id=9]
[ext_resource path="res://assets/menupress.png" type="Texture" id=10]
[ext_resource path="res://assets/leadnorm.png" type="Texture" id=11]
[ext_resource path="res://assets/menuhov.png" type="Texture" id=12]
[ext_resource path="res://assets/menunorm.png" type="Texture" id=13]
[ext_resource path="res://assets/leadpress.png" type="Texture" id=14]
[ext_resource path="res://assets/leadbg.png" type="Texture" id=16]
[ext_resource path="res://scenes/Menu.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/exitbuthov.png" type="Texture" id=18]
[ext_resource path="res://assets/exitbutnorm.png" type="Texture" id=19]
[ext_resource path="res://assets/exitbutpress.png" type="Texture" id=20]
[ext_resource path="res://assets/bordernorm.png" type="Texture" id=21]
[ext_resource path="res://assets/borderhov.png" type="Texture" id=22]
[ext_resource path="res://assets/borderpress.png" type="Texture" id=23]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 25
extra_spacing_char = 5
font_data = ExtResource( 2 )

[node name="Encryptica" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_vertical_guides_": [ 416.0 ]
}

[node name="BG" type="TextureRect" parent="."]
margin_right = 832.0
margin_bottom = 416.0
texture = ExtResource( 1 )
expand = true

[node name="MainContainer" type="VBoxContainer" parent="."]
margin_left = 40.0
margin_top = 88.0
margin_right = 790.0
margin_bottom = 148.0
custom_constants/separation = 12

[node name="HBox" type="HBoxContainer" parent="MainContainer"]
margin_right = 750.0
margin_bottom = 60.0
custom_constants/separation = 6

[node name="Cartell" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 48.0
margin_bottom = 60.0

[node name="Cartell2" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_right = 102.0
margin_bottom = 60.0
letter = "B"

[node name="Cartell3" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_right = 156.0
margin_bottom = 60.0
letter = "I"

[node name="Cartell4" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_right = 210.0
margin_bottom = 60.0
letter = "E"

[node name="Cartell5" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_right = 264.0
margin_bottom = 60.0
letter = "N"

[node name="Cartell6" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_right = 318.0
margin_bottom = 60.0
letter = "V"

[node name="Cartell7" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_right = 372.0
margin_bottom = 60.0
letter = "E"

[node name="Cartell8" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_right = 426.0
margin_bottom = 60.0
letter = "N"

[node name="Cartell9" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_right = 480.0
margin_bottom = 60.0
letter = "I"

[node name="Cartell10" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_right = 534.0
margin_bottom = 60.0
letter = "D"

[node name="Cartell11" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_right = 588.0
margin_bottom = 60.0
letter = "A"

[node name="Cartell12" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 594.0
margin_right = 642.0
margin_bottom = 60.0
letter = "S"

[node name="Cartell13" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 648.0
margin_right = 696.0
margin_bottom = 60.0

[node name="Cartell14" parent="MainContainer/HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 702.0
margin_right = 750.0
margin_bottom = 60.0

[node name="HBox2" type="HBoxContainer" parent="MainContainer"]
margin_top = 72.0
margin_right = 750.0
margin_bottom = 132.0
custom_constants/separation = 6

[node name="Cartell" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 48.0
margin_bottom = 60.0

[node name="Cartell2" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_right = 102.0
margin_bottom = 60.0

[node name="Cartell3" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_right = 156.0
margin_bottom = 60.0

[node name="Cartell4" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_right = 210.0
margin_bottom = 60.0

[node name="Cartell5" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_right = 264.0
margin_bottom = 60.0

[node name="Cartell6" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_right = 318.0
margin_bottom = 60.0

[node name="Cartell7" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_right = 372.0
margin_bottom = 60.0
letter = "A"

[node name="Cartell8" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_right = 426.0
margin_bottom = 60.0

[node name="Cartell9" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_right = 480.0
margin_bottom = 60.0

[node name="Cartell10" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_right = 534.0
margin_bottom = 60.0

[node name="Cartell11" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_right = 588.0
margin_bottom = 60.0

[node name="Cartell12" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 594.0
margin_right = 642.0
margin_bottom = 60.0

[node name="Cartell13" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 648.0
margin_right = 696.0
margin_bottom = 60.0

[node name="Cartell14" parent="MainContainer/HBox2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 702.0
margin_right = 750.0
margin_bottom = 60.0

[node name="HBox3" type="HBoxContainer" parent="MainContainer"]
margin_top = 144.0
margin_right = 750.0
margin_bottom = 204.0
custom_constants/separation = 6

[node name="Cartell" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 48.0
margin_bottom = 60.0

[node name="Cartell2" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 54.0
margin_right = 102.0
margin_bottom = 60.0

[node name="Cartell3" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 108.0
margin_right = 156.0
margin_bottom = 60.0
letter = "E"

[node name="Cartell4" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 162.0
margin_right = 210.0
margin_bottom = 60.0
letter = "N"

[node name="Cartell5" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 216.0
margin_right = 264.0
margin_bottom = 60.0
letter = "C"

[node name="Cartell6" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 270.0
margin_right = 318.0
margin_bottom = 60.0
letter = "R"

[node name="Cartell7" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 324.0
margin_right = 372.0
margin_bottom = 60.0
letter = "Y"

[node name="Cartell8" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 378.0
margin_right = 426.0
margin_bottom = 60.0
letter = "P"

[node name="Cartell9" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 432.0
margin_right = 480.0
margin_bottom = 60.0
letter = "T"

[node name="Cartell10" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 486.0
margin_right = 534.0
margin_bottom = 60.0
letter = "I"

[node name="Cartell11" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_right = 588.0
margin_bottom = 60.0
letter = "C"

[node name="Cartell12" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 594.0
margin_right = 642.0
margin_bottom = 60.0
letter = "A"

[node name="Cartell13" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 648.0
margin_right = 696.0
margin_bottom = 60.0

[node name="Cartell14" parent="MainContainer/HBox3" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 702.0
margin_right = 750.0
margin_bottom = 60.0

[node name="PistaLab" type="Label" parent="."]
margin_left = 64.0
margin_top = 32.0
margin_right = 768.0
margin_bottom = 58.0
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "Pista"
align = 1

[node name="PistaLabel2" type="Label" parent="."]
margin_left = 152.0
margin_top = 360.0
margin_right = 328.0
margin_bottom = 386.0
grow_horizontal = 2
custom_fonts/font = SubResource( 3 )
text = "!l / !letter - !s / !solve"
align = 1

[node name="title" type="Label" parent="."]
margin_left = 40.0
margin_top = 360.0
margin_right = 113.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 2 )
text = "@Endorth4"

[node name="RecordContainer" type="VBoxContainer" parent="."]
margin_left = 448.0
margin_top = 304.0
margin_right = 776.0
margin_bottom = 374.0

[node name="Label" type="Label" parent="RecordContainer"]
margin_right = 328.0
margin_bottom = 16.0
grow_horizontal = 0
custom_fonts/font = SubResource( 4 )
text = "-"
align = 2

[node name="Label2" type="Label" parent="RecordContainer"]
margin_top = 20.0
margin_right = 328.0
margin_bottom = 36.0
grow_horizontal = 0
custom_fonts/font = SubResource( 4 )
text = "-"
align = 2

[node name="Label3" type="Label" parent="RecordContainer"]
margin_top = 40.0
margin_right = 328.0
margin_bottom = 56.0
grow_horizontal = 0
custom_fonts/font = SubResource( 4 )
text = "-"
align = 2

[node name="AddPhrase" type="TextureButton" parent="."]
margin_left = 40.0
margin_top = 320.0
margin_right = 130.0
margin_bottom = 360.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Players" type="Node" parent="."]

[node name="LeaderboardButton" type="TextureButton" parent="."]
margin_left = 736.0
margin_top = 40.0
margin_right = 776.0
margin_bottom = 80.0
toggle_mode = true
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 9 )
expand = true

[node name="MenuButton" type="TextureButton" parent="."]
margin_left = 136.0
margin_top = 320.0
margin_right = 272.0
margin_bottom = 360.0
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 12 )
expand = true

[node name="LeaderPanel" type="TextureRect" parent="."]
visible = false
margin_left = 224.0
margin_top = 40.0
margin_right = 608.0
margin_bottom = 376.0
texture = ExtResource( 16 )
expand = true

[node name="Lab" type="Label" parent="LeaderPanel"]
margin_left = 24.0
margin_top = 16.0
margin_right = 363.0
margin_bottom = 42.0
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
text = "LEADERBOARD"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="LeaderPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 64.0
margin_right = -16.0
margin_bottom = -14.0

[node name="VBoxContainer" type="VBoxContainer" parent="LeaderPanel/ScrollContainer"]

[node name="Menu" parent="." instance=ExtResource( 17 )]
visible = false
anchor_left = 0.308
anchor_top = 0.173
anchor_right = 0.692
anchor_bottom = 0.788
margin_left = -0.256012
margin_top = 0.0319977
margin_right = 0.255981
margin_bottom = 0.191986

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 36.0
margin_top = 36.0
margin_right = 94.0
margin_bottom = 60.0
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 18 )
expand = true

[node name="BorderButton" type="TextureButton" parent="."]
margin_left = 104.0
margin_top = 36.0
margin_right = 128.0
margin_bottom = 60.0
toggle_mode = true
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 22 )
expand = true

[connection signal="pressed" from="AddPhrase" to="." method="_on_AddPhrase_pressed"]
[connection signal="toggled" from="LeaderboardButton" to="." method="_on_LeaderboardButton_toggled"]
[connection signal="toggled" from="MenuButton" to="." method="_on_MenuButton_toggled"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="toggled" from="BorderButton" to="." method="_on_BorderButton_toggled"]
